# yuiop2040-tools

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
duplex-matrix-sim/: CMakeLists.txt  main.c
fm24cl64b/: CMakeLists.txt  README.md  fm24cl64b.c  fm24cl64b.h  main.c
gpiomon/: CMakeLists.txt  main.c
helloworld/: CMakeLists.txt  main.c
spiinit/: CMakeLists.txt  main.c
stdio-usb/: CMakeLists.txt  main.c
stdio-usb2/: CMakeLists.txt  main.c  my_usb_config.h  usb_descriptors.c
